# MRO

./: CMakeLists.txt  main.cpp
documentation/: MRO-dokumentacja.docx
filteredImages/: .about.txt
img/differenceImages/: .about.txt
img/dilatatedImage/: .about.txt
img/erodedImages/: .about.txt
img/filteredImages/: .about.txt
img/gradientImages/: .about.txt
img/inputFiles/: .about.txt  01.pgm  09.pgm  10.pgm  11.pgm  12.pgm  13.pgm  16.pgm  19.pgm  20.pgm
include/: gaussianFilter.hpp  imageManagment.hpp  imageOperations.hpp  watershade.hpp
inputFiles/: 02.pgm  03.pgm  04.pgm  05.pgm  06.pgm  07.pgm  08.pgm  14.pgm  15.pgm  17.pgm  18.pgm  21.pgm
memoryManagment/: imageAllocation.cpp  imageAllocation.hpp
outputFiles/: .about.txt
source/: gaussianFilter.cpp  imageManagment.cpp  imageOperations.cpp  watershade.cpp
tgaSrc/: Ttiming.h  tga_test.cpp
tga_src/: TPGM.cpp  TPGM.h
